startpage filter and supporters

--- a/application/modules/default/views/scripts/home/index-plingcom.phtml
+++ b/application/modules/default/views/scripts/home/index-plingcom.phtml
@@ -19,261 +19,7 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-
-$modelInfo = new Default_Model_Info();
-$this->comments = $modelInfo->getLatestComments(10);
-$this->users = $modelInfo->getNewActiveMembers(18);
-
-// LIVE
-$this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
-$this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
-$this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
-$this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
-
-// CC TEST
-// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
-
-
-$storeCatIds = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
-$this->categories = $storeCatIds;
-
-$helperFetchCategory = new Default_View_Helper_CatTitle();
-$helperFetchCatParent = new Default_View_Helper_CatParent();
-$getAuthUser = new Default_View_Helper_GetAuthUser();
-$helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
-$helperImage = new Default_View_Helper_Image();
-$helpPrintDate = new Default_View_Helper_PrintDate();
-
-$auth = Zend_Auth::getInstance();
-$member = $getAuthUser->getAuthUser();
-$this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
-$this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
 ?>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
-    <header id="page_header" xmlns="http://www.w3.org/1999/html">
-        <div class="container header" style="position: relative;">                     
-              
-                 <?php if (false === $auth->hasIdentity() && empty($member->username)) {
-                     $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
-                     $redirectString = '/login/redirect/'.$helperEncryptUrl->EncryptUrl($_SERVER["REQUEST_URI"]);
-                     ?>
-                     <ul class="menu-nav-tabs absolute-right" >
-                         <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'register') ? 'active' : '') ?>">
-                             <a href="/register">Register</a>
-                         </li>
-                         <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'login') ? 'active' : '') ?>">
-                             <a href="/login<?=$redirectString?>">Login</a>
-                         </li>
-                     </ul>
-                 <?php } ?>
-            
-        <section class="container">
-            <section class="wrapper">
-                <section>
-                    <figure class="logo-header" >
-                        <a href="/">
-                            <img width="<?=$this->template['header-logo']['width']?>" border="0" src="<?=$this->template['header-logo']['image-src']?>">
-                        </a>
-                    </figure>
-                  
-                    <nav id="nav-top">
-                        <div class="pull-left col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        </div>
+<?php  echo $this->render('home/index-opendesktop.phtml');
 
-                        <div class="pull-right col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                            <?php if ($auth->hasIdentity() && !empty($member->username)) { ?>
-                                <ul class="menu pull-right">
-                                    <li class="link relative profile-menu-container">
-                                        <a rel="profile-menu" class="menu-trigger">
-                                        <div class="absolute header-profile-image"><img
-                                                src="<?= $helperImage->Image($member->profile_image_url, array('width' => 30, 'height' => 30)) ?>"/>
-                                        </div>
-                                        <span><?= $member->username ?></span>
-                                        </a>
-                                        <ul class="profile-menu menu-dropdown">
-                                            <div class="dropdown-header"></div>
-                                            <li class="link first">
-                                                <a href="/product/add/">
-                                                    <?= $this->translate('Add Product') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>">
-                                                    <?= $this->translate('My Products') ?>
-                                                </a>
-                                            </li>
-                                            
-                                            <li class="link">
-                                                <a href="/settings/">
-                                                    <?= $this->translate('My Settings') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
-                                                    <?= $this->translate('Plings') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="/logout/">
-                                                    <?= $this->translate('Logout') ?>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            <?php } else { ?>
-                            <?php } ?>
-                            <form id="search" class="pull-right" action="/search">
-                                <input type="text" name="projectSearchText" class="content-search">
-
-                                <div class="icon-search-input absolute cursor-hand"
-                                     onclick="$('#search').submit()"></div>
-                            </form>
-                        </div>
-                    </nav>
-                </section>
-
-            </section>
-        </section>            
-        </div>
-    </header>
-
-<main id="explore-content" class="startpage-store" >
-<div class="GridFlex">
-<div class="GridFlex-cell sidebar-left">  
-        <?php  echo $this->render('explore/partials/filter.phtml'); ?> 
-</div>
-<div class="GridFlex-cell content">   
-        <div class="contentcontainer">
-                        <div class="row ">   
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                                                                  
-                                        <span>  Themes </span>
-                                        <div class="prod-widget-box new-products" >
-                                        <?php
-                                        $this->rownum = 1; 
-                                        foreach ($this->productsThemes as $this->product) {
-                                            echo $this->render('home/partials/product_plingcom.phtml');
-                                            $this->rownum++;
-                                        }           
-                                        ?>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                         <span>Add-Ons</span>                                         
-                                         <div class="prod-widget-box new-products" >
-                                         <?php
-                                         $this->rownum = 1; 
-                                         foreach ($this->productsAddons as $this->product) {
-                                             echo $this->render('home/partials/product_plingcom.phtml');
-                                             $this->rownum++;
-                                         }           
-                                         ?>                                        
-                                        </div>                                       
-                                    </div>
-                        </div>
-                        <div class="row blockpadding" >
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                          
-                                                <span>Wallpapers</span>                                              
-                                                <div class="prod-widget-box new-products" >
-                                                <?php
-                                                $this->rownum = 1; 
-                                                foreach ($this->productsWallpapers as $this->product) {
-                                                    echo $this->render('home/partials/product_plingcom.phtml');
-                                                    $this->rownum++;
-                                                }           
-                                                ?>
-                                                </div>                             
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                            
-                                               <span> Apps </span>                                               
-                                               <div class="prod-widget-box new-products" >
-                                               <?php
-                                               $this->rownum = 1; 
-                                               foreach ($this->productsApps as $this->product) {
-                                                   echo $this->render('home/partials/product_plingcom.phtml');
-                                                   $this->rownum++;
-                                               }           
-                                               ?>                                              
-                                                </div>
-                                    </div>                        
-                        </div>
-
-                        <div class="row blockpadding">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-                                    <span class="labelTitle" >Newest  Community Members   </span>                                 
-                                        
-                                    <div class="newusers">
-                                         <?php 
-                                        foreach ($this->users as $user) {                                  
-                                            ?>
-                                                <div class="user " >
-                                                    <div class="u-wrap">
-                                                        <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($user['member_id']); ?>">
-                                                            <figure >
-                                                                <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
-                                                            </figure>
-                                                            <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
-                                                        </a>
-                                                         <span class="small"><?= $helpPrintDate->printDate($user['created_at'])?></span>
-                                                    </div>
-                                                </div>
-                                        <?php } ?>
-
-                                        <div class="clearboth"></div> 
-
-                                    </div>
-                        </div>
-                        </div>
-</div>
-</div>
-<div class="GridFlex-cell sidebar-right">   
-        <aside  id="explore-sidebar" >     
-
-        <div class="downloadDiv" >
-            <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
-        </div>
-
-        <div class="supportDiv" >
-        <?php 
-                $identity = Zend_Auth::getInstance()->getIdentity();
-                if(null == $identity || (null != $identity && !$this->isSupporter($identity->member_id))) {                                                  
-        ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Become a Supporter<br>of Opendesktop.org</a>
-        <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
-            <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
-        <?php   }?>
-        </div>
-
-        <div  class="row sidebar-right-info" >                                
-            <span class="newsTitle"> News </span>
-            <div class="prod-widget-box right bgwhite " id="rss-feeds"> </div>                  
-      
-        <span class="newsTitle"> Lastest 10 Comments </span>
-         <div class="prod-widget-box right bgwhite" id="lastcomments">
-                <?php
-                foreach ($this->comments as $this->comment) {
-                    echo $this->render('explore/partials/comment.phtml');
-                }
-                ?>
-            </div>
-
-          
-        </aside>
-</div>
-</div>
-
-</main>
-
-
-<?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){
-                MenuHover.setup();                    
-                LoginContainer.update();
-                RssNews.setup();                
-            });
-        ');
