--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -18,6 +18,9 @@
 		.blockpadding{
 			padding-top: 20px;
 		}
+		.supportersrow{
+			min-height: 420px;
+		}
 		.contentcontainer{
 		        	padding-right: 15px;
 		        	padding-left: 15px;
