--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -23,6 +23,7 @@
 $modelInfo = new Default_Model_Info();
 $this->comments = $modelInfo->getLatestComments(10);
 $this->users = $modelInfo->getNewActiveMembers(18);
+$this->supporters = $modelInfo->getNewActiveSupporters(18);
 
 // LIVE
 $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
@@ -40,8 +41,6 @@ $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 $storeCatIds = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
 $this->categories = $storeCatIds;
 
-$helperFetchCategory = new Default_View_Helper_CatTitle();
-$helperFetchCatParent = new Default_View_Helper_CatParent();
 $getAuthUser = new Default_View_Helper_GetAuthUser();
 $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helperImage = new Default_View_Helper_Image();
@@ -150,43 +149,45 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
 <div class="GridFlex-cell content">   
         <div class="contentcontainer">
                         <div class="row ">   
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                                                                  
-                                        <span>  Themes </span>
-                                        <div class="prod-widget-box new-products" >
-                                        <?php
-                                        $this->rownum = 1; 
-                                        foreach ($this->productsThemes as $this->product) {
-                                            echo $this->render('home/partials/product_plingcom.phtml');
-                                            $this->rownum++;
-                                        }           
-                                        ?>
-                                        </div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">      
+                                    <span>Wallpapers</span>                                              
+                                    <div class="prod-widget-box new-products" >
+                                    <?php
+                                    $this->rownum = 1; 
+                                    foreach ($this->productsWallpapers as $this->product) {
+                                        echo $this->render('home/partials/product_plingcom.phtml');
+                                        $this->rownum++;
+                                    }           
+                                    ?>
+                                    </div>                                                                     
+                                      
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                         <span>Add-Ons</span>                                         
-                                         <div class="prod-widget-box new-products" >
-                                         <?php
-                                         $this->rownum = 1; 
-                                         foreach ($this->productsAddons as $this->product) {
-                                             echo $this->render('home/partials/product_plingcom.phtml');
-                                             $this->rownum++;
-                                         }           
-                                         ?>                                        
-                                        </div>                                       
+                                    <span>  Themes </span>
+                                    <div class="prod-widget-box new-products" >
+                                    <?php
+                                    $this->rownum = 1; 
+                                    foreach ($this->productsThemes as $this->product) {
+                                        echo $this->render('home/partials/product_plingcom.phtml');
+                                        $this->rownum++;
+                                    }           
+                                    ?>
+                                    </div>
+                                                                      
                                     </div>
                         </div>
                         <div class="row blockpadding" >
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                          
-                                                <span>Wallpapers</span>                                              
-                                                <div class="prod-widget-box new-products" >
-                                                <?php
-                                                $this->rownum = 1; 
-                                                foreach ($this->productsWallpapers as $this->product) {
-                                                    echo $this->render('home/partials/product_plingcom.phtml');
-                                                    $this->rownum++;
-                                                }           
-                                                ?>
-                                                </div>                             
+                                      <span>Add-Ons</span>                                         
+                                      <div class="prod-widget-box new-products" >
+                                      <?php
+                                      $this->rownum = 1; 
+                                      foreach ($this->productsAddons as $this->product) {
+                                          echo $this->render('home/partials/product_plingcom.phtml');
+                                          $this->rownum++;
+                                      }           
+                                      ?>                                        
+                                     </div>                                       
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">                            
                                                <span> Apps </span>                                               
@@ -202,11 +203,35 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
                                     </div>                        
                         </div>
 
+                        <div class="row blockpadding supportersrow">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <span class="labelTitle" >Latest  Active Supporters  </span>                                                                         
+                                    <div class="newusers">
+                                         <?php 
+                                        foreach ($this->supporters as $user) {                                  
+                                            ?>
+                                                <div class="user " >
+                                                    <div class="u-wrap">
+                                                        <a href="<?php echo $helperBuildMemberUrl->buildMemberUrl($user['member_id']); ?>">
+                                                            <figure >
+                                                                <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                                            </figure>
+                                                            <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($user['username']); ?></h3>                                                   
+                                                        </a>
+                                                         <span class="small"><?= $helpPrintDate->printDate($user['created_at'])?></span>
+                                                    </div>
+                                                </div>
+                                        <?php } ?>
+
+                                        <div class="clearboth"></div> 
+
+                                    </div>
+                        </div>
+                        </div>
+
                         <div class="row blockpadding">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-                                    <span class="labelTitle" >Newest  Community Members   </span>                                 
-                                        
+                                    <span class="labelTitle" >Latest  Community Members   </span>                                                                         
                                     <div class="newusers">
                                          <?php 
                                         foreach ($this->users as $user) {                                  
@@ -229,6 +254,8 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
                                     </div>
                         </div>
                         </div>
+
+                        
 </div>
 </div>
 <div class="GridFlex-cell sidebar-right">   
