startpage css hotfix

--- a/application/modules/default/views/scripts/partials/header/template_home.phtml
+++ b/application/modules/default/views/scripts/partials/header/template_home.phtml
@@ -21,10 +21,10 @@
  **/
 ?>
 <style type="text/css">
-    
+
     .metamenu
     {
-        position: fixed; background-color: #fff; width: 100%; z-index: 1000;
+        position: fixed; background-color: #fff; width: 100%; z-index: 1000;height: 15px;overflow: hidden;
     }
     header#page_header
     {
