--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2834,7 +2834,8 @@ span.page-views {
           }
         }
       }
-    
+      
+
 
 
     }
@@ -5349,6 +5350,22 @@ img.imgpopover
        color:#37628D;
        padding-top: 10px;       
        padding-bottom: 10px;     
+    }
+
+    .my-downloadshistory-list{
+      .header{        
+        border-bottom: 1px solid #ccc;
+      }
+      .rating{
+        width: 70%;
+        font-size: 10pt;
+      }
+      .downloadhistory-image{
+        width: 50px;
+        height: 50px;
+        float: left; 
+        margin-right: 15px;      
+      }
     }
 }
     
