--- a/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
@@ -35,6 +35,8 @@
 	</div>
 	</div>
 	<div class="col-lg-1">
-	<span class="glyphicon glyphicon-heart"></span>
+            <?php                
+                echo $this->render('partials/followProduct.phtml'); 
+	    ?>
 	</div>
 </div>
