--- a/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopDownloadHistory.phtml
@@ -36,7 +36,7 @@
 	</div>
 	<div class="col-lg-1">
             <?php                
-                echo $this->render('partials/followProduct.phtml'); 
+                echo $this->render('user/partials/followProduct.phtml'); 
 	    ?>
 	</div>
 </div>
