--- a/application/modules/default/views/scripts/user/partials/followProduct.phtml
+++ b/application/modules/default/views/scripts/user/partials/followProduct.phtml
@@ -23,6 +23,7 @@
 $txtUserFollows = '';
 $urlUserFollows = $this->buildProductUrl($this->project_id, 'unfollow');
 $imgFile = '/theme/flatui/img/icon-like-color.png';
+var_dump($this->member);
 if (false == $this->userFollowsProject($this->member->member_id, $this->project_id)) {
     $txtUserFollows = '';
     $urlUserFollows = $this->buildProductUrl($this->project_id, 'follow');
