--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5353,8 +5353,21 @@ img.imgpopover
     }
 
     .my-downloadshistory-list{
+      .smaller{
+        font-size: smaller;
+      }
       .header{        
-        border-bottom: 1px solid #ccc;
+        border-top:1px solid #ccc;
+        padding-top:15px;
+      }
+      .subheader{       
+       background-color: #ddd
+      }
+      .paddingLeft80{
+        padding-left: 80px;
+      }
+      .marginLeft80{
+        margin-left: 80px;
       }
       .rating{
         width: 70%;
