--- a/application/modules/default/views/scripts/user/downloadhistory.phtml
+++ b/application/modules/default/views/scripts/user/downloadhistory.phtml
@@ -45,6 +45,9 @@ $this->issupport = $this->isSupporter($this->member->member_id);
                    <div class="row">
                        <div class="col-lg-4">
                        </div>
+                       <div class="col-lg-1">
+                        Downloaded at
+                       </div>
                        <div class="col-lg-2">
                            Action
                        </div>
